--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <nav class="nav header__nav">
         <ul class="nav__list header__nav-list">
           <li class="nav__list-item">
-            <a class="nav__item-link" href="/"></a>
+            <a class="nav__item-link" href="/">about</a>
           </li> 
+
         </ul>
       </nav>
     </div>
