--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <li class="nav__list-item">
             <a class="nav__item-link" href="/">about</a>
           </li> 
-
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="/">about</a>
+          </li>
         </ul>
       </nav>
     </div>
