--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <li class="nav__list-item">
             <a class="nav__item-link" href="/">about</a>
           </li>
+          <li>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt explicabo quaerat illum cum dolores hic adipisci doloremque tempora similique ducimus delectus, voluptas aliquid numquam laboriosam minima dolorum repellat earum necessitatibus, qui expedita. Velit ipsam quibusdam eveniet mollitia praesentium hic?</h2>
+          </li>
         </ul>
       </nav>
     </div>
